fix: long text sidebar layout bug

--- a/apps/sports-helsinki/src/domain/venue/venueInfo/venueInfo.module.scss
+++ b/apps/sports-helsinki/src/domain/venue/venueInfo/venueInfo.module.scss
@@ -67,7 +67,6 @@ a.link {
   margin: 0;
   padding: 0;
   list-style-type: none;
-  white-space: pre;
   line-height: $lineheight-l;
   font-size: $fontsize-body-l;
   & > li:not(:last-child) {
